--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@ h2{font-size: 70px;}
 <div>
 <h1>#1</h1>
 
-<video src="hunter x/AllVideo_1692385062697.mp4" height="576" width="720" controls>v</video>
+<video style="width: 100%;"  src="hunter x/AllVideo_1692385062697.mp4" height="576" width="720" controls>v</video>
 </div>
 
 
 
 <div>
 <h1>#2</h1>
-<video src="hunter x/AllVideo_1689961036605.mp4" height="576" width="720" controls>v</video>
+<video style="width: 100%;" src="hunter x/AllVideo_1689961036605.mp4" height="576" width="720" controls>v</video>
 </div>
 
 <div>
 <h1>#3</h1>
-<video src="hunter x/1704231917629.mp4" height="576" width="720" controls></video>
+<video style="width: 100%;" src="hunter x/1704231917629.mp4" height="576" width="720" controls></video>
 </div>
 </section>
 
@@ -57,18 +57,18 @@ h2{font-size: 70px;}
 <section id="x">
 <div>
 <h1>#4</h1>
-<video src="hunter x/1704231879469.mp4" height="576" width="720" controls></video>
+<video style="width: 100%;" src="hunter x/1704231879469.mp4" height="576" width="720" controls></video>
 </div>
 
 
 <div>
 <h1>#5</h1>
-<video src="hunter x/allVideoSssTik_1672381002585.mp4" height="576" width="720" controls>v</video>
+<video style="width: 100%;" src="hunter x/allVideoSssTik_1672381002585.mp4" height="576" width="720" controls>v</video>
 </div>
 
 <div>
 <h1>#6</h1>
-<video src="hunter x/tikTok_1670260122993.mp4" height="576" width="720" controls></video>
+<video style="width: 100%;" src="hunter x/tikTok_1670260122993.mp4" height="576" width="720" controls></video>
 </div>
 </section>
 
